cmake_minimum_required(VERSION 3.15)
project(SPOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(SPOJ main.cpp)
add_executable(CMakeLists CMakeLists.txt)
add_executable(main main.cpp)
add_executable(WILLITST SOLUTIONS/WILLITST.cpp SOLUTIONS/TestCode.cpp SOLUTIONS/INTEST.cpp SOLUTIONS/INVCNT.cpp SOLUTIONS/CANTON.cpp SOLUTIONS/ALCATRAZ3.cpp SOLUTIONS/PT07Z.cpp SOLUTIONS/PERMUT2.cpp SOLUTIONS/TRICOUNT.cpp SOLUTIONS/TOPOSORT.cpp SOLUTIONS/GIRLSNBYS.cpp SOLUTIONS/GSS1.cpp SOLUTIONS/GSS1-final.cpp)
add_executable(STPAR SOLUTIONS/STPAR.cpp)
add_executable(TestCode SOLUTIONS/TestCode.cpp)
add_executable(ABSYS SOLUTIONS/ABSYS.cpp)
add_executable(INTEST SOLUTIONS/INTEST.cpp)
add_executable(INVCNT SOLUTIONS/INVCNT.cpp)
add_executable(CANTON SOLUTIONS/CANTON.cpp)
add_executable(ALCATRAZ3 SOLUTIONS/ALCATRAZ3.cpp)
add_executable(PT07Z SOLUTIONS/PT07Z.cpp)
add_executable(PT07Y SOLUTIONS/PT07Y.cpp)
add_executable(PERMUT2 SOLUTIONS/PERMUT2.cpp)
add_executable(TRICOUNT SOLUTIONS/TRICOUNT.cpp)
add_executable(TOPOSORT SOLUTIONS/TOPOSORT.cpp)
add_executable(GIRLSNBYS SOLUTIONS/GIRLSNBYS.cpp)
add_executable(GSS1 SOLUTIONS/GSS1.cpp)
add_executable(GSS1-final SOLUTIONS/GSS1-final.cpp)