cmake_minimum_required(VERSION 3.15)
project(SPOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(SPOJ main.cpp)
add_executable(CMakeLists CMakeLists.txt)
add_executable(main main.cpp)
add_executable(WILLITST SOLUTIONS/WILLITST.cpp SOLUTIONS/TestCode.cpp SOLUTIONS/INTEST.cpp SOLUTIONS/INVCNT.cpp SOLUTIONS/CANTON.cpp SOLUTIONS/ALCATRAZ3.cpp SOLUTIONS/PT07Z.cpp SOLUTIONS/PERMUT2.cpp SOLUTIONS/TRICOUNT.cpp SOLUTIONS/TOPOSORT.cpp SOLUTIONS/GIRLSNBYS.cpp SOLUTIONS/GSS1.cpp "SOLUTIONS/GSS1-final(Accepted).cpp" SOLUTIONS/NGM.cpp SOLUTIONS/FARIDA.cpp SOLUTIONS/test.cpp SOLUTIONS/BUGLIFE.cpp SOLUTIONS/AIBOHP.cpp SOLUTIONS/SegmentTreesWithoutLazyProp.cpp "SOLUTIONS/(LAZYPROPUSED).cpp" SOLUTIONS/LAZY.cpp SOLUTIONS/ETF.cpp SOLUTIONS/OLOLo.cpp SOLUTIONS/BEENUMS.cpp SOLUTIONS/EULER.cpp SOLUTIONS/ANARC90.cpp SOLUTIONS/HPYNOS.cpp SOLUTIONS/OFFSIDE.cpp SOLUTIONS/MAXLN.cpp SOLUTIONS/ASSIGN.cpp SOLUTIONS/BABTWR.cpp SOLUTIONS/BYTESM2.cpp SOLUTIONS/MBLAST.cpp SOLUTIONS/TRT.cpp SOLUTIONS/PIGBANK.cpp SOLUTIONS/RENT.cpp SOLUTIONS/SAMER08C.cpp SOLUTIONS/SAMER08F.cpp)
add_executable(STPAR SOLUTIONS/STPAR.cpp)
add_executable(TestCode SOLUTIONS/TestCode.cpp)
add_executable(ABSYS SOLUTIONS/ABSYS.cpp)
add_executable(INTEST SOLUTIONS/INTEST.cpp)
add_executable(INVCNT SOLUTIONS/INVCNT.cpp)
add_executable(CANTON SOLUTIONS/CANTON.cpp)
add_executable(ALCATRAZ3 SOLUTIONS/ALCATRAZ3.cpp)
add_executable(PT07Z SOLUTIONS/PT07Z.cpp)
add_executable(PT07Y SOLUTIONS/PT07Y.cpp)
add_executable(PERMUT2 SOLUTIONS/PERMUT2.cpp)
add_executable(TRICOUNT SOLUTIONS/TRICOUNT.cpp)
add_executable(TOPOSORT SOLUTIONS/TOPOSORT.cpp)
add_executable(GIRLSNBYS SOLUTIONS/GIRLSNBYS.cpp)
add_executable(GSS1 SOLUTIONS/GSS1.cpp)
add_executable(GSS1-final "SOLUTIONS/GSS1-final(Accepted).cpp")
add_executable(NGM SOLUTIONS/NGM.cpp)
add_executable(FARIDA SOLUTIONS/FARIDA.cpp)
add_executable(test SOLUTIONS/test.cpp)
add_executable(LAZY SOLUTIONS/LAZY.cpp)
add_executable(OLOLo SOLUTIONS/OLOLo.cpp)
add_executable(BEENUMS SOLUTIONS/BEENUMS.cpp)
add_executable(EULER SOLUTIONS/EULER.cpp)
add_executable(ANARC90 SOLUTIONS/ANARC90.cpp)
add_executable(HPYNOS SOLUTIONS/HPYNOS.cpp)
add_executable(OFFSIDE SOLUTIONS/OFFSIDE.cpp)
add_executable(MAXLN SOLUTIONS/MAXLN.cpp)
add_executable(ASSIGN SOLUTIONS/ASSIGN.cpp)
add_executable(BABTWR SOLUTIONS/BABTWR.cpp)
add_executable(BYTESM2 SOLUTIONS/BYTESM2.cpp)
add_executable(MBLAST SOLUTIONS/MBLAST.cpp)
add_executable(MCOINS SOLUTIONS/MCOINS.cpp)
add_executable(MMAXPER SOLUTIONS/MMAXPER.cpp)
add_executable(PARTY SOLUTIONS/PARTY.cpp)
add_executable(TRT SOLUTIONS/TRT.cpp)
add_executable(PIGBANK SOLUTIONS/PIGBANK.cpp)
add_executable(RENT SOLUTIONS/RENT.cpp)
add_executable(SAMER SOLUTIONS/SAMER08C.cpp)
add_executable(SAMER08C-Candy SOLUTIONS/SAMER08C-Candy.cpp)
add_executable(SAMER08-DNA SOLUTIONS/SAMER08-DNA.cpp)
add_executable(SCUBADIV SOLUTIONS/SCUBADIV.cpp)
add_executable(SOLDIER SOLUTIONS/SOLDIER.cpp)
add_executable(TRIP SOLUTIONS/TRIP.cpp)
add_executable(TWENDS SOLUTIONS/TWENDS.cpp)
add_executable(CARSELL SOLUTIONS/CARSELL.cpp)
add_executable(VESTIGIUM SOLUTIONS/VESTIGIUM.cpp)
add_executable(NESTINGDEPTH SOLUTIONS/NESTINGDEPTH.cpp)
add_executable(PARENTING SOLUTIONS/PARENTING.cpp)
add_executable(HOTELS SOLUTIONS/HOTELS.cpp)
add_executable(PT07X SOLUTIONS/PT07X.cpp)
add_executable(BORW SOLUTIONS/BORW.cpp)
add_executable(NHAY SOLUTIONS/NHAY.cpp)
add_executable(BITMAP SOLUTIONS/BITMAP.cpp)
add_executable(ARRAYSUB SOLUTIONS/ARRAYSUB.cpp)
add_executable(MIXTURES SOLUTIONS/MIXTURES.cpp)
add_executable(GSS3 SOLUTIONS/GSS3.cpp)
add_executable(AMR01G SOLUTIONS/AMR01G.cpp)
add_executable(EXPOGO SOLUTIONS/EXPOGO.cpp)
add_executable(COUNTDOWN SOLUTIONS/COUNTDOWN.cpp)
add_executable(BERLANDPOKER SOLUTIONS/BERLANDPOKER.cpp)
add_executable(NewTheatreSquare SOLUTIONS/NewTheatreSquare.cpp)
add_executable(NewTheatreSquare2 SOLUTIONS/NewTheatreSquare2.cpp)
add_executable(Arcesium1 Codeforces/Arcesium1.cpp)
add_executable(Arcesium2 Codeforces/Arcesium2.cpp)
add_executable(OddSelection Codeforces/OddSelection.cpp)
add_executable(Raizada SOLUTIONS/Raizada.cpp)
add_executable(Raizada2 SOLUTIONS/Raizada2.cpp)